# Tracy-Beef

./: .gitignore  BeefProj.toml  CMakeLists.txt  LICENSE  README.md
Setup/: BeefSpace.toml  CMakeLists.txt
Setup/src/: Program.bf
src/: Bindings.bf  Color.bf  Zone.bf
